--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "@react-navigation/stack": "^6.3.16",
     "@shopify/flash-list": "1.4.0",
     "expo": "^48.0.19",
+    "expo-file-system": "~15.2.2",
     "expo-linear-gradient": "~12.1.2",
+    "expo-print": "~12.2.1",
     "expo-secure-store": "~12.1.1",
+    "expo-sharing": "~11.2.2",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
     "firebase": "^9.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.71.13",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
