--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "^48.0.19",
     "expo-file-system": "~15.2.2",
     "expo-linear-gradient": "~12.1.2",
+    "expo-mail-composer": "~12.1.1",
     "expo-print": "~12.2.1",
     "expo-secure-store": "~12.1.1",
     "expo-sharing": "~11.2.2",
@@ -29,7 +30,7 @@
     "firebase": "^9.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.13",
+    "react-native": "0.71.14",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
