--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.0.1",
     "@oclif/core": "^2.8.10",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/slider": "^4.4.2",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
@@ -26,7 +27,6 @@
     "expo-secure-store": "~12.1.1",
     "expo-sharing": "~11.2.2",
     "expo-status-bar": "~1.4.4",
-    "expo-updates": "~0.16.4",
     "firebase": "^9.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -37,8 +37,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.10",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
